:alembic: Fixing CD errors 7: CSS fill-available to stretch

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -13,11 +13,9 @@
   flex-direction: column;
   justify-content: flex-start;
   width: 100vw;
-  width: fill-available;
-  width: -webkit-fill-available;
+  width: stretch;
   height: 100vh;
-  max-height: fill-available;
-  max-height: -webkit-fill-available;
+  max-height: stretch;
   overflow: hidden;
   position: fixed;
   margin: 0;
